Azure AD authentication

--- a/PostwebPortal/appsettings.json
+++ b/PostwebPortal/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "abhikghosh41outlookcom.onmicrosoft.com",
+    "TenantId": "062f2b38-dab4-47eb-a90b-965562a8795d",
+    "ClientId": "92611db6-c537-44cb-b2f8-3ec111236fb9",
+    "CallbackPath": "/signin-oidc"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,7 +14,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {  
-    "DefaultConnection" : "Server=tcp:easdatabase.database.windows.net,1433;Initial Catalog=easdatabase;Persist Security Info=False;User ID=ankar;Password=Ankith123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:easdatabase.database.windows.net,1433;Initial Catalog=easdatabase;Persist Security Info=False;User ID=ankar;Password=Ankith123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
